<resources>
    <string name="app_name">Practica1</string>
    <string name="activity1Title">Alumno de TTA</string>
    <string name="user">Introduce DNI</string>
    <string name="contrasena">Introduce contraseña</string>
    <string name="loginButton">Acceder</string>
    <string name="loginError">Error al intentar loguearse</string>

    <string name="activity2Title">Evaluación de TTA</string>
    <string name="welcome">Bienvenido</string>
    <string name="lessonTitle">Lección 1: Introducción a android</string>
    <string name="menuButton1">Nuevo Test</string>
    <string name="menuButton2">Nuevo Ejercicio</string>
    <string name="menuButton3">Seguimiento</string>

    <string name="activity3Title">Nuevo Test</string>
    <string name="button_send">Enviar</string>
    <string name="button_help">Ver ayuda</string>
    <string name="testError">Errooooor</string>
    <string name="testOk">Acierto!</string>

    <string name="activity4Title">Nuevo Ejercicio</string>
    <string name="buttonUploadFile">Subir Fichero</string>
    <string name="buttonTakePhoto">Sacar foto</string>
    <string name="buttonRecordAudio">Grabar audio</string>
    <string name="buttonRecordVideo">Grabar video</string>

    <string name="noFunction">Funcionalidad aun no disponible</string>
    <string name="noCamera">No existe una cámara en este movil, por lo que no puede realizarse esta acción.</string>
    <string name="noMicro">No existe un microfono en este movil, por lo que no puede realizarse esta acción.</string>

    <string name="noApp">No existe una una aplicacion para realizar esta acción.</string>

    <string name="connecting">Conectando...</string>
    <string name="baseUrl">http://u017633.ehu.eus:28080/ServidorTta/rest/tta</string>
</resources>
